; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/amd/libamu/extr_xutil.c_xmalloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/amd/libamu/extr_xutil.c_xmalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D_MEM = common dso_local global i32 0, align 4
@XLOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Allocated size %d; block %p\00", align 1
@XLOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"Retrying memory allocation\00", align 1
@XLOG_FATAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [14 x i8] c"Out of memory\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @xmalloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 600, i32* %4, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %8

8:                                                ; preds = %7, %1
  br label %9

9:                                                ; preds = %33, %8
  %10 = load i32, i32* %2, align 4
  %11 = call i64 @malloc(i32 %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %9
  %15 = load i32, i32* @D_MEM, align 4
  %16 = call i64 @amuDebug(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %14
  %19 = load i32, i32* @XLOG_DEBUG, align 4
  %20 = load i32, i32* %2, align 4
  %21 = load i64, i64* %3, align 8
  %22 = call i32 (i32, i8*, ...) @plog(i32 %19, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %20, i64 %21)
  br label %23

23:                                               ; preds = %18, %14
  %24 = load i64, i64* %3, align 8
  ret i64 %24

25:                                               ; preds = %9
  %26 = load i32, i32* %4, align 4
  %27 = icmp sgt i32 %26, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %25
  %29 = load i32, i32* @XLOG_ERROR, align 4
  %30 = call i32 (i32, i8*, ...) @plog(i32 %29, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %31 = call i32 @sleep(i32 1)
  br label %32

32:                                               ; preds = %28, %25
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %4, align 4
  %35 = add nsw i32 %34, -1
  store i32 %35, i32* %4, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %9, label %37

37:                                               ; preds = %33
  %38 = load i32, i32* @XLOG_FATAL, align 4
  %39 = call i32 (i32, i8*, ...) @plog(i32 %38, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %40 = call i32 @going_down(i32 1)
  %41 = call i32 (...) @abort() #3
  unreachable
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i64 @amuDebug(i32) #1

declare dso_local i32 @plog(i32, i8*, ...) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @going_down(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
